force-app/main/default/objects/Plan_Benefits__c/Plan_Benefits__c.object-meta.xml
<CustomObject>
    <description>Represents the benefits which make up a plan component. Also signifies any rate driving or key benefits for a component</description>
    <label>Plan Benefits</label>
    <nameField>
        <displayFormat>PB-{000000000}</displayFormat>
        <label>Benefit Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>