force-app/main/default/objects/Plan_Benefits__c/fields/Attribute_Category__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Category__c</fullName>
    <formula>TEXT(Benefit__r.Category__c)</formula>
    <label>Attribute Category</label>
    <type>Text</type>
</CustomField>