force-app/main/default/objects/Plan_Benefits__c/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <formula>Benefit__r.Name</formula>
    <label>Attribute Code</label>
    <type>Text</type>
</CustomField>