force-app/main/default/objects/Plan_Benefits__c/fields/Attribute_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Display_Name__c</fullName>
    <formula>Benefit__r.Full_Name__c</formula>
    <label>Attribute Display Name</label>
    <type>Text</type>
</CustomField>