force-app/main/default/objects/Plan_Benefits__c/fields/Attribute_Long_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Long_Code__c</fullName>
    <formula>Benefit__r.Code__c</formula>
    <label>Attribute Long Code</label>
    <type>Text</type>
</CustomField>