force-app/main/default/objects/Plan_Benefits__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <formula>Benefit__r.Attribute_Name__c</formula>
    <label>Attribute Name</label>
    <type>Text</type>
</CustomField>