force-app/main/default/objects/Plan_Benefits__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <label>Benefit</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Plan Benefits</relationshipLabel>
    <relationshipName>Product_Component_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>