force-app/main/default/objects/Plan_Benefits__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <formula>Plan__r.Name</formula>
    <label>Component Name</label>
    <type>Text</type>
</CustomField>