force-app/main/default/objects/Plan_Benefits__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <formula>TEXT(Plan__r.Product_Component_Type__c)</formula>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>