force-app/main/default/objects/Plan_Benefits__c/fields/In_Network__c.field-meta.xml
<CustomField>
    <fullName>In_Network__c</fullName>
    <formula>Value__r.In_Network_Display_Value__c</formula>
    <label>In Network</label>
    <type>Text</type>
</CustomField>