force-app/main/default/objects/Plan_Benefits__c/fields/Out_Network__c.field-meta.xml
<CustomField>
    <fullName>Out_Network__c</fullName>
    <formula>Value__r.Out_Of_Network_Display_Value__c</formula>
    <label>Out Network</label>
    <type>Text</type>
</CustomField>