force-app/main/default/objects/Plan_Benefits__c/fields/Plan_Family__c.field-meta.xml
<CustomField>
    <fullName>Plan_Family__c</fullName>
    <formula>CASESAFEID(Plan__r.Plan_Family__c)</formula>
    <label>Plan Family</label>
    <type>Text</type>
</CustomField>