force-app/main/default/objects/Plan_Benefits__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Benefit Value</description>
    <inlineHelpText>Benefit Value</inlineHelpText>
    <label>Value</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Attribute_Value__c.Attribute__c</field>
            <operation>equals</operation>
            <valueField>$Source.Benefit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Attribute_Value__c</referenceTo>
    <relationshipLabel>Plan Benefits</relationshipLabel>
    <relationshipName>Plan_Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>